--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -21,4 +21,11 @@
         android:background="@drawable/background_left"
         android:layout_marginStart="25dp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_seen"
+        android:layout_below="@id/show_message"
+        android:visibility="gone"/>
+
 </RelativeLayout>
